<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DietTS</string>


    <string name="all">"All"</string>
    <string name="chart">"Chart"</string>
    <string name="calendar">"Calendar"</string>
    <string name="cancel">"Cancel"</string>
    <string name="ok">"Ok"</string>
    <string name="select">"Select"</string>
    <string name="setting">"Setting"</string>
    <string name="save">"Save"</string>
    <string name="record">"Record"</string>
    <string name="weight">"Weight"</string>
    <string name="weight_kg">"Weight (kg)"</string>
    <string name="weight_two">"Weight"</string>
    <string name="weight_two_g">"Weight (g)"</string>
    <string name="nutrient">"Nutrient"</string>
    <string name="nutrient_g">"Nutrient (g)"</string>
    <string name="carbohydrate">"Carbohydrate"</string>
    <string name="protein">"Protein"</string>
    <string name="fat">"Fat"</string>
    <string name="calorie">"Calorie"</string>
    <string name="diet">"Diet"</string>
    <string name="list">"List"</string>
    <string name="quantity">"Quantity"</string>
    <string name="quantity_count">"Quantity"</string>
    <string name="count">""</string>
    <string name="basics">"basics"</string>
    <string name="invite">"Invite"</string>

    <string name="set_range">"Set Range"</string>
    <string name="this_month">"This Month"</string>
    <string name="this_year">"This Year"</string>
    <string name="version_information">"Version Information"</string>
    <string name="service_center">"Service center"</string>
    <string name="contact_us">"Contact us"</string>
    <string name="add_review">"Add Review"</string>
    <string name="goal_setting">"Goal Setting"</string>

    <string name="total_calorie_kcal">"Total Calorie (Kcal)"</string>

    <string name="target_weight_kg">"Target Weight (kg)"</string>
    <string name="target_calorie_kcal">"Target calories per day (Kcal)"</string>

    <!--hint-->
    <string name="hint_weight">"Please enter your weight."</string>
    <string name="hint_weight_two">"Please enter your weight."</string>
    <string name="hint_quantity">"Please enter quantity."</string>
    <string name="hint_search_food">"Please enter the name of the food."</string>


    <!--empty-->
    <string name="empty_chart">"No data. Please enter your diet."</string>

    <!--error-->
    <string name="error_email">"There are no email applications installed."</string>

    <string name="shared_title">Invite</string>
    <string name="shared_message">I recommend App to you! :)</string>
    <string name="shared_call_to_action_text">Install!</string>

    <string name="contact_email" tools:ignore="MissingTranslation">"sky877kr@gmail.com"</string>
    <string name="invitation_deep_link" tools:ignore="MissingTranslation">"https://sn3d4.app.goo.gl/TSDIET"</string>

    <string name="ad_app_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375~1813593632"</string>
    <string name="banner_ad_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375/2168816858"</string>
</resources>
