<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="ChartBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.yts.tsdiet.viewmodel.chart.ChartViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/chart"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                setKindText="@{model.mKindType}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableEnd="@drawable/ic_arrow_drop_down_brown_12dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_brown_12dp"
                android:drawablePadding="2dp"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:onClick="@{()->model.changeKind()}"
                android:padding="8dp"
                android:text="@string/weight" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_date_range"
                setDateRangeText="@{model.mDateRangeType}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_brown_12dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_brown_12dp"
                android:drawablePadding="2dp"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/all" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" />

    </LinearLayout>
</layout>